--- a/InternetBankaciligi.Data/InternetBankaciligi.Data.csproj
+++ b/InternetBankaciligi.Data/InternetBankaciligi.Data.csproj
@@ -6,6 +6,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InternetBankaciligi.Entities\InternetBankaciligi.Entities.csproj" />
+    <ProjectReference Include="..\InternetBankaciligi.Shared\InternetBankaciligi.Shared.csproj" />
   </ItemGroup>
 
 </Project>
