API ile güncel kurlar çekildi

--- a/InternetBankaciligi.MVC/InternetBankaciligi.MVC.csproj
+++ b/InternetBankaciligi.MVC/InternetBankaciligi.MVC.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Remove="Views\Home\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InternetBankaciligi.Host\InternetBankaciligi.Host.csproj" />
+  </ItemGroup>
+
 </Project>
